# BLS12-381

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/extensions/: fq12.c  fq12.h  fq2.c  fq2.h  fq6.c  fq6.h
src/fq/: bls_params.c  bls_params.h  fq.c  fq.h  fq12.c  fq12.h  fq2.c  fq2.h  fq6.c  fq6.h
src/fr/: fr.c  fr.h
src/groups/: g1.c  g1.h  g2.c  g2.h
src/pairing/: miller.c  miller.h
tests/: test  test.c
